[package]
name = "ubuffer"
version = "0.4.3"
authors = ["drbawb <drbawb@fatalsyntax.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
bincode = "1.0"
byteorder = "1.0"
clap = "2"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
rand = "0.6"
ring = "0.13"
serde = "1.0"
serde_derive = "1.0"
udt = "0.2"
